[fix bug 768024] Long names do not overflow.
On search results, long names no longer push content outside of the
result box.

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -393,14 +393,20 @@ a.btn {
 .search-page .result h2 {
     font-size:20px;
     margin:0;
+    width: 220px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .details ul {
     font-size: 12px;
     list-style: none;
     text-align: left;
+    width: 220px;
+    white-space: nowrap;
     overflow: hidden;
-    width: 200px;
+    text-overflow: ellipsis;
 }
 
 .clear {
